Upgraded react, mobx, mobx-react and lodash to the latest Altered all computed to use the prefered get syntax

--- a/react-examples/50-poker-timer/demo.css
+++ b/react-examples/50-poker-timer/demo.css
@@ -41,6 +41,9 @@
 .blind-listing th {
 	text-align: center;
 }
+.pure-table td {
+	padding: 1em;
+}
 .pure-table tr.active td {
 	font-weight: bold;
 }
